# pydogfight

./: .gitignore  MANIFEST.in  README.md  base.yaml  bes.py  download_models_from_gulab.py  echarts.py  evaluate.py  greedy_vs_greedy.yaml  main.py  main_dev.py  main_old.py  main_test.py  monk.py  move_to_goal.xml  plotdata.py  policy_demo.py  policy_demo_result.json  ppo_demo.py  ppo_move_train.py  ppo_old_demo.py  ppo_vs_ppo.yaml  pybt_server.sh  pybt_test.py  pyproject.toml  pytree_demo.py  replay.py  requirements.txt  run.py  run.yaml  run_v1.yaml  run_v2.yaml  run_v2_indestructible.yaml  shells  shells.sh  test.py  train.py  utils.py  viewer_demo.py
aitree/: behavior.py  composites.py
bt/: __init__.py  base.py  builder.py  nodes.py  nodes_rl.py  nodes_rl_1v1.py  nodes_rl_multiple.py  nodes_thesis.py  nodes_v7.py  nodes_v8.py  share_actor_critic_policy.py
custom/: ppo.py  rl_utils.py  thesis_mixed_ppo.py  thesis_ppo.py  thesis_ppo_multiple.py
gym_dogfight/: __init__.py  manual_control.py
logs/: ppo_log.json
not_use/: conver_png_to_jpg.py  requirements.txt
nouse/: run_one.py
old_aitree/: README.md  __init__.py  actions.py  behaviour.py  builder.py  colors.py  composites.py  conditions.py  config.py  context.py  decorators.py  nodes.py  register.py  sub_tree.py  trees.py  utilities.py
policies/: bt_greedy.xml  bt_greedy_blue.xml  bt_greedy_chatgpt_v1.xml  bt_greedy_chatgpt_v2.xml  bt_greedy_no_fire.xml  bt_greedy_policy_default.xml  bt_greedy_red.xml  bt_greedy_v4.xml  bt_rl_v2.xml  bt_v3.xml  manual_control.xml  ppo_hier.xml  ppo_v1.xml  (+1 more)
pybt/: node.py  (+5 more)
(+18732 files in other folders)
